<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/zen_menu_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent" >

    <LinearLayout
        android:id="@+id/zen_menu_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:orientation="vertical" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent" >

        <LinearLayout
            android:id="@+id/zen_menu_bar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:background="#ffffff"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/menu_light"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/red_btn"
                android:drawableTop="@drawable/icon_light"
                android:paddingTop="6dp"
                android:text="@string/zen_light"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/menu_reply"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/purple_btn"
                android:drawableTop="@drawable/icon_reply"
                android:paddingTop="6dp"
                android:text="@string/zen_reply"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/menu_copy"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/navy_btn"
                android:drawableTop="@drawable/icon_copy"
                android:paddingTop="6dp"
                android:text="@string/zen_copy"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/menu_pm"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/real_blue_btn"
                android:drawableTop="@drawable/icon_pm"
                android:paddingTop="6dp"
                android:text="@string/zen_pm"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>